--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                 <img src="https://via.placeholder.com/500x500" alt="Generated Image">
             </div>
         </section>
+        <div class="image-gallery">
+            <img src="https://via.placeholder.com/150" alt="Image 1">
+            <img src="https://via.placeholder.com/150" alt="Image 2">
+            <img src="https://via.placeholder.com/150" alt="Image 3">
+        </div>
         <footer class="input-footer">
             <input type="text" placeholder="Enter your prompt here...">
             <button>Generate</button>
