--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         <section class="main-image-area">
             <div class="image-display">
-                <img src="https://via.placeholder.com/500x500" alt="Generated Image">
+                <img src="https://user-gen-media-assets.s3.amazonaws.com/gpt4o_images/2a8456a0-1c57-46e5-ad49-bf5778514a38.png" alt="Generated Image">
             </div>
         </section>
         <div class="image-gallery">
