add negative number Placement

--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
         </section>
         <section class="main-image-area">
             <div class="image-display">
-                <img src="https://user-gen-media-assets.s3.amazonaws.com/gpt4o_images/2a8456a0-1c57-46e5-ad49-bf5778514a38.png" alt="Generated Image">
+                <img src="https://via.placeholder.com/500x500" alt="Generated Image">
             </div>
         </section>
         <div class="image-gallery">
             <img src="https://via.placeholder.com/150" alt="Image 1">
             <img src="https://via.placeholder.com/150" alt="Image 2">
             <img src="https://via.placeholder.com/150" alt="Image 3">
+            <img src="https://via.placeholder.com/150" alt="Image 4">
+            <img src="https://via.placeholder.com/150" alt="Image 5">
+            <img src="https://via.placeholder.com/150" alt="Image 6">
         </div>
+        <div class="beta-badge">Beta</div>
         <footer class="input-footer">
             <input type="text" placeholder="Enter your prompt here...">
             <button>Generate</button>
